--- a/style.css
+++ b/style.css
@@ -590,6 +590,7 @@ footer {
 }
 
 .footer__container {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -742,6 +743,7 @@ footer {
     }
 
     .footer__container {
+        width: 100%;
         display: flex;
         align-items: start;
     }
