--- a/style.css
+++ b/style.css
@@ -105,14 +105,15 @@ header {
 }
 
 .banner__text_container {
-    width: 1320px;
+    max-width: 1320px;
+    width: 100%;
     height: auto;
     position: absolute;
 }
 
 .banner__text {
     top: 163px;
-    width: 1320px;
+    max-width: 1320px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -184,7 +185,8 @@ header {
 .priority__card {
     display: flex;
     align-items: flex-start;
-    width: 409px;
+    max-width: 409px;
+    width: 100%;
     height: 109px;
 }
 .priority__card_icon {
@@ -263,7 +265,7 @@ header {
 .course__cards_row1 {
     display: flex;
     justify-content: space-between;
-    width: 1320px;
+    max-width: 1320px;
     margin-bottom: 45px;
 }
 
@@ -598,7 +600,7 @@ footer {
 }
 
 .footer__container {
-    width:1320px;
+    max-width:1320px;
     display: flex;
     justify-content: space-around;
 }
@@ -912,24 +914,24 @@ footer {
     }
 
     .feedback__title_description {
-        width: 400px;
+        max-width: 400px;
         margin-left: 20px;
         margin-right: 20px;
     }
 
     .feedback__contacts {
-        width: 400px;
+        max-width: 400px;
         padding-left: 10px;
         text-decoration: none;
     }
 
     .feedback__subtitle_description {
-        width: 400px;
+        max-width: 400px;
         padding-left: 10px;
     }
 
     .feedback__form_up {
-        width: 400px;
+        max-width: 400px;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
@@ -982,13 +984,32 @@ footer {
 
 @media screen and (max-width:400px) {
    
+    header {
+        height: 110px;
+    }
+
     .container {
+        max-width: 320px;
         width: 100%;
     }
 
+    .header__container {
+        height: 110px;
+    }
+
+    .header__logo {
+        width: 83px;
+        height: 32px;
+    }
+    
+    .header__menu {
+      display: none;
+    }
+
     .banner__text {
-        top: 50px;
-        left: 30%;
+        top: 10px;
+        left: 0px;
+        margin-left: 15px;
     }
 
     .feedback__title {
@@ -996,7 +1017,8 @@ footer {
     }
 
     .feedback__title_description, .feedback__subtitle_description, .course__subtitle {
-        width: 350px;
+        max-width: 320px;
+        width: 100%;
     }
 
     .feedback__contacts {
@@ -1007,23 +1029,51 @@ footer {
         padding-bottom: 0px;
     }
 
-    .course__cards_row1, .course__cards_row2, .course__card, .course__card2 {
-        width: 380px;
+    .course__subtitle {
+        width: 100%;
+        white-space: normal ;
+    }
+
+    .course__cards_row1, .course__cards_row2, .course__card, .course__card2,  .feedback__container {
+        max-width: 320px;
+        width: 100%;
+    }
+
+    .feedback, .feedback__form, .feedback__form_up {
+        max-width: 300px;
+        width: 100%;
+    }
+    
+    
+    .feedback__form_left, .feedback__form_right, .feedback__input-center, .feedback__form_description_text, .feedback__input, .feedback__form_description, .feedback__button_container {
+        max-width: 280px;
+        width: 100%;
+    }
+
+    .feedback__form_description_text {
+        max-width: 250px;
     }
 
     .footer__container {
-        width: 390px;
+        max-width: 320px;
+        width: 100%;
         display: flex;
         align-items: start;
     }
 
     .footer__info {
-        width: 358px;
+        max-width: 320px;
+        width: 100%;
         height: 200px;
+        margin-left: 0;
     }
 
-    .footer__info_text, .footer__info_row1 {
-        width: 330px;
+    .footer__info_text, .footer__info_row1, .footer__info_row2, .footer__info_row3 {
+        max-width: 300px;
+        width: 100%;
+        white-space: normal;
+        hyphens: auto;
+        margin-left: 10px;
     }
 
     .footer__social {
