--- a/style.css
+++ b/style.css
@@ -1112,23 +1112,55 @@ footer {
         width: 100%;
     }
     
-    
+
     .feedback__form_left, .feedback__form_right, .feedback__form_description_text, .feedback__input, .feedback__form_description, .feedback__button_container {
         max-width: 280px;
         width: 100%;
+        height: auto;
     }
 
-    .feedback__input-center {
+    .feedback__form_left {
+        margin-bottom: 0;
+    }
+
+    .feedback__input {
+        height: 50px;
+        margin-bottom: 20px;
+    }
+
+    .placeholder-box input {
+        height: 50px;
+    }
+
+     .input, .feedback__input-center, .placeholder-box {
         box-sizing: border-box;
-        padding-bottom: 100px;
-        padding-left: 0px;
+        padding-left: 0;
+        height: 50px;
         width: 280px;
     }
 
-    
-
     .feedback__form_description_text {
         max-width: 250px;
+    }
+
+    .feedback__subtitle {
+        font-size: 25px;
+        line-height: 30px;
+    }
+
+    ::placeholder {
+        font-size: 16px;
+    }
+
+    .placeholder-text {
+        font-size: 16px;
+        top: 8px;
+
+    }
+
+    .feedback__form_button {
+        height: 50px;
+        font-size: 16px;
     }
 
     .footer__container {
