--- a/style.css
+++ b/style.css
@@ -1009,7 +1009,7 @@ footer {
 @media screen and (max-width:440px) {
    
     header {
-        height: 110px;
+        height: 70px;
     }
 
     .container {
@@ -1018,7 +1018,7 @@ footer {
     }
 
     .header__container {
-        height: 110px;
+        height: 70px;
     }
 
     .header__menu {
@@ -1030,6 +1030,9 @@ footer {
         height: 32px;
     }
     
+    .banner__image {
+        margin-bottom: 25px;
+    }
 
     .banner__text {
         top: 10px;
