--- a/style.css
+++ b/style.css
@@ -634,6 +634,13 @@ footer {
 
 .footer__info_row2 {
     margin-bottom: 22px;
+    max-width: 620px;
+    width: 100%;
+}
+
+.footer__info_row3 {
+    max-width: 672px;
+    width: 100%;
 }
 
 .footer__social {
@@ -647,8 +654,6 @@ footer {
     width: 44px;
     height: 44px;
 }
-
-
 
 /* media */
 
